--- a/views/crud.ejs
+++ b/views/crud.ejs
@@ -6,7 +6,7 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- 3. Título de la página -->
-        <title>     </title>
+        <title><%= title %></title>
 
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
@@ -25,7 +25,7 @@
         <!-- 1. Referencia al archivo estático en public -->
         <!-- link rel="stylesheet" href="./crud-style.css"-->
 
-        <link rel="stylesheet" href="/public/stylesheets/crud-style.css">
+        <link rel="stylesheet" href="stylesheets/crud-style.css">
 
     </head>
     <body>
@@ -36,7 +36,7 @@
                         <div class="row">
                             <div class="col-sm-6">
                                 <!-- 4. Título de la tabla -->
-                                <h2>    </h2>
+                                <h2><%= title %></h2>
                             </div>
                             <div class="col-sm-6">
                                 <a href="#addEmployeeModal"
@@ -69,6 +69,7 @@
                         </thead>
                         <!-- 5. Arreglo de usuarios -->
                         <tbody>
+                            <% usersArray.forEach( user => { %>
                             <tr>
                                 <td>
                                     <span class="custom-checkbox">
@@ -77,9 +78,15 @@
                                         <label for="checkbox1"></label>
                                     </span>
                                 </td>
-                                <td> XX </td>
-                                <td> NN </td>
-                                <td> RR </td>
+                                <td><%= user.iduser %></td>
+                                <td><%= user.name %></td>
+                                <td>
+                                    <!-- 
+                                        Dato relacionado
+                       
+                                        users->users_roles->roles.name
+                                     -->
+                                </td>
                                 <td>
                                     <a href="#editEmployeeModal" class="edit"
                                         data-toggle="modal"><i
@@ -93,7 +100,7 @@
                                             title="Delete">&#xE872;</i></a>
                                 </td>
                             </tr>
-
+                            <% }) %>
                         </tbody>
                     </table>
                     <div class="clearfix">
@@ -236,6 +243,6 @@
 
         <!-- 2. Referencia al archivo estático en public -->
         <!-- script src="./crud-javascript.js" defer></script-->
-        <script src="/public/javascripts/crud-javascript.js" defer></script>
+        <script src="javascripts/crud-javascript.js" defer></script>
     </body>
 </html>
