--- a/views/crud.ejs
+++ b/views/crud.ejs
@@ -86,6 +86,7 @@
                        
                                         users->users_roles->roles.name
                                      -->
+                                     <%= user.users_roles.roles_idrole_role.name %>
                                     </td>
                                     <td>
                                         <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i
