--- a/views/token.ejs
+++ b/views/token.ejs
@@ -4,10 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>
-            <%= title %>
-        </title>
-        <link rel="stylesheet" href="stylesheets/ticket-style.css">
+        <title><%= title %></title>
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
         <link rel="stylesheet"
@@ -16,6 +13,7 @@
             href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+            <link rel="stylesheet" href="stylesheets/ticket-style.css">
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script
             src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
@@ -40,7 +38,7 @@
                                 aplicación datos</p>
                             <div class="input-group">
                                 <p
-                                    class="form-control hint-text"> <%= tk %> </p>
+                                    class="form-control hint-text"> <%= tk %></p>
                             </div>
                         </div>
                     </div>
