--- a/views/token.ejs
+++ b/views/token.ejs
@@ -23,7 +23,7 @@
     </head>
     <body>
         <div class="container-xl">
-            <%- undefined('partials/navbar.ejs') %>
+            <%- include\('partials/navbar.ejs') %>
             <div id="myModal">
                 <div class="modal-dialog modal-newsletter">
                     <div class="modal-content">
