--- a/views/token.ejs
+++ b/views/token.ejs
@@ -23,7 +23,7 @@
     </head>
     <body>
         <div class="container-xl">
-            <%- include('partials/navbar.ejs') %>
+            
             <div id="myModal">
                 <div class="modal-dialog modal-newsletter">
                     <div class="modal-content">
@@ -38,7 +38,8 @@
                                 aplicación datos</p>
                             <div class="input-group">
                                 <p
-                                    class="form-control hint-text"> <%= tk %></p>
+                                    class="form-control hint-text"> <%= Token %>
+                                </p>
                             </div>
                         </div>
                     </div>
