--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,12 +5,13 @@
 	</button>
 	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
 		<div class="navbar-nav ml-auto">
-			<a href="#" class="nav-link user-action">  <%=   username   %>   </a>
-			  <!-- 1. Enlace para realizar una petición GET a la ruta '/logout' -->
-			  <a href="/logout" class="nav-item nav-link messages"><i class="fa fa-power-off"></i> Logout</a>
-			  <!-- 1. Muestre el username  -->
-			  
-			
+			<!-- 1. Muestre el username  -->
+			<a href="#" class="nav-link user-action">
+				<%= username %>
+			</a>
+
+			<!-- 1. Enlace para realizar una petición GET a la ruta '/logout' -->
+			<a href="/logout" class="nav-item nav-link messages"><i class="fa fa-power-off"></i> Logout</a>
 		</div>
 	</div>
 </nav>
