--- a/views/token.ejs
+++ b/views/token.ejs
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title><%= title %></title>
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
-        <link rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-        <link rel="stylesheet"
-            href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-            <link rel="stylesheet" href="stylesheets/ticket-style.css">
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-        <script
-            src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-        
-    </head>
-    <body>
-        <div class="container-xl">
-            <%- include('partials/navbar.ejs') %>
-            <div id="myModal">
-                <div class="modal-dialog modal-newsletter">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <div class="icon-box mx-auto">
-                                <i class="fa fa-ticket"></i>
-                            </div>
-                        </div>  
-                        <div class="modal-body text-center">
-                            <h4>JWT token</h4>
-                            <p>Utilice el siguiente token de acceso para la
-                                aplicación datos</p>
-                            <div class="input-group">
-                                <p
-                                    class="form-control hint-text"> <%= tk %></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <title>Bootstrap Subscribe Newsletter Form inside Modal</title>
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="stylesheets/ticket-style.css" />
+  </head>
+  <body>
+    <div class="container-xl">
+      <%- include('partials/navbar.ejs') %>
+      <div id="myModal">
+        <div class="modal-dialog modal-newsletter">
+          <div class="modal-content">
+            <div class="modal-header">
+              <div class="icon-box mx-auto">
+                <i class="fa fa-ticket"></i>
+              </div>
             </div>
-
+            <div class="modal-body text-center">
+              <h4>JWT token</h4>
+              <p>
+                Utilice el siguiente token de acceso para la aplicación datos
+              </p>
+              <div class="input-group">
+                <p class="form-control hint-text"><%= token %></p>
+              </div>
+            </div>
+          </div>
         </div>
-
-    </body>
+      </div>
+    </div>
+  </body>
 </html>
